<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegistrationFragment"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create a new account"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:contentDescription="Create a new account" />

    <Spinner
        android:id="@+id/titleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/title_options"
        android:prompt="@string/select_title"
        android:layout_marginTop="16dp"
        android:contentDescription="Select Title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="First Name"
        android:id="@+id/FnameInput"
        android:layout_marginTop="30dp"
        android:contentDescription="Enter First Name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Last Name"
        android:id="@+id/LnameInput"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="Enter Last Name" />

    <RadioGroup
        android:id="@+id/genderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/maleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:contentDescription="Select Male Gender" />

        <RadioButton
            android:id="@+id/femaleRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:contentDescription="Select Female Gender" />
    </RadioGroup>

    <EditText
        android:id="@+id/dobInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Date of Birth"
        android:inputType="date"
        android:layout_marginTop="16dp"
        android:contentDescription="Date of Birth" />

    <EditText
        android:id="@+id/ssnInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Social Security Number  xxxxxxxxx"
        android:inputType="number"
        android:layout_marginTop="16dp"
        android:digits="0123456789"
        android:maxLength="9"
        android:contentDescription="Social Security Number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:id="@+id/emailInput"
        android:layout_marginTop="16dp"
        android:contentDescription="Email Address" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:id="@+id/passwordInput"
        android:layout_marginTop="16dp"
        android:contentDescription="Enter Password" />

    <EditText
        android:id="@+id/addressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Address"
        android:contentDescription="Enter Address" />

    <EditText
        android:id="@+id/regionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Region"
        android:contentDescription="Enter Region" />

    <EditText
        android:id="@+id/localityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Locality"/>

    <EditText
        android:id="@+id/zipCodeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Postal Code"
        android:contentDescription="Enter PostCode" />


    <EditText
        android:id="@+id/countryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Country"
        android:contentDescription="Enter Country" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Home Phone i.e ### ### ####"
        android:inputType="number"
        android:id="@+id/homephoneInput"
        android:layout_marginTop="16dp"
        android:digits="0123456789"
        android:maxLength="10"
        android:contentDescription="Enter Home Phone" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Mobile Phone i.e ### ### ####"
        android:inputType="number"
        android:id="@+id/mobilephoneInput"
        android:layout_marginTop="16dp"
        android:digits="0123456789"
        android:maxLength="10"
        android:contentDescription="Enter Mobile Phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Work Phone i.e ### ### #### "
        android:inputType="number"
        android:id="@+id/workphoneInput"
        android:layout_marginTop="16dp"
        android:digits="0123456789"
        android:maxLength="10"
        android:contentDescription="Enter Work Phone" />

    <CheckBox
        android:id="@+id/agreeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Agree to Terms and Conditions"
        android:layout_marginTop="16dp"
        android:contentDescription="Accept Terms and Conditions"/>


    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        android:background="@color/colorPrimary"
        android:enabled="true"
        android:contentDescription="Register Button" />


    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="Cancel Button" />

</LinearLayout>

</ScrollView>